--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     </div>
   </nav>
 
-  <div>
+  <div class="section">
     <div class="image-slider-wrapper">
       <div class="image-slider-track">
 
@@ -334,8 +334,6 @@
         <img src="/images/new/Banner 2 - K-12.jpg" class="slider-image" />
 
         <img src="/images/new/Banner 3 - Higher Education.jpg" class="slider-image" />
-
-
 
       </div>
     </div>
@@ -397,8 +395,8 @@
     </div>
   </div>
 
-  <div class="circle-section">
-    <div>
+  <div class="circle-section ">
+    <div class="">
       <img src="/images/SECTION 1/Large Circle shape 1.png" class="absolute large-circle-shape-1"
         style="height: 70vh; left: 0vw; top: 70vh; z-index: 9" alt="" />
 
@@ -419,7 +417,7 @@
           overflow: hidden;
         " alt="" />
 
-    <div class="container">
+    <div class="container section">
       <!-- K-12 Education Card -->
       <div class="education-card" style="border-right: 2px solid rgb(203, 203, 203)">
         <div class="card-content">
@@ -437,7 +435,7 @@
                 class="ml-10 arrow" style="padding: 10px 15px">→</span></button>
 
 
-            <button class="explore-btn translate-scale block md:hidden">
+            <button class="learn-more-btn translate-scale block md:hidden">
               Explore K12 Solutions
               <span class="arrow">→</span>
             </button>
@@ -458,7 +456,7 @@
           <button class="learn-more-btn translate-scale hidden md:block" style="padding: 10px 15px">Explore HED
             Solutions <span class="ml-10">→</span></button>
 
-          <button class="explore-btn translate-scale block md:hidden">
+          <button class="learn-more-btn translate-scale block md:hidden">
             Explore HED Solutions
             <span class="arrow">→</span>
         </div>
@@ -466,7 +464,7 @@
     </div>
   </div>
 
-  <div class="flex flex-col items-center justify-center text-center p-20 empowering-main" style="
+  <div class="flex flex-col items-center justify-center text-center p-20 empowering-main section" style="
         border: 1px solid #f0f4f4;
         border-radius: 20px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -480,7 +478,7 @@
         education solutions, we equip students, teachers, and institutions
         with the tools to explore, create, and succeed. From coding and
         robotics to design thinking and AI, our solutions span across K–12 and
-        Higher Education—building tomorrow’s thinkers today
+        Higher Education—building tomorrow’s thinkers today.
       </p>
     </div>
   </div>
@@ -495,7 +493,7 @@
     </div>
   </div>
 
-  <div id="section1" class="context active">
+  <div id="section1" class="context active section">
     <div class="flex flex-row justify-between items-center mt-10 k-12">
       <div class="pl-32 flex flex-col k-12-main" style="width: 70%">
         <div class="flex flex-row k-12-header">
@@ -513,7 +511,7 @@
 
         <p style="width: 50%; margin-bottom: 50px" class="k-12-desc">
           Engage every student with hands-on K-12 solutions that bring STEM,
-          AI, Coding and creativity to life
+          AI, Coding and creativity to life.
         </p>
       </div>
       <div class="flex k-12-man-image" style="width: 30%">
@@ -617,7 +615,7 @@
   </div>
 
   <!-- Section 2 -->
-  <div id="section2" class="context">
+  <div id="section2" class="context section">
     <div class="flex flex-row justify-between" style="
           height: 70vh;
           background-image: url('images/HED Tab Open File/Higher Education-assets/Higher education tab holder.png');
@@ -827,7 +825,7 @@
     </div>
   </div>
 
-  <div class="partners-container">
+  <div class="partners-container section">
     <div class="partners-section">
       <h2 class="partners-header">Our Partners</h2>
       <div class="partners-logos-wrapper">
@@ -844,7 +842,7 @@
   <!-- <div class="atlab-trust">
     <img src="/images/atlab.png" alt="" />
   </div> -->
-  <div class="relative atlab-trust" style="height:100%; width: 100%">
+  <div class="relative atlab-trust section" style="height:100%; width: 100%">
     <img src="/images/SECTION 3/Circle shape 23.png" class="translate-scale"
       style="width: 30vw; position: absolute; top: -5%; left: 9%; " />
     <img src="/images/SECTION 3/ATLAB Trusted partner Holder 1.png" alt="" class="relative overflow-hidden"
@@ -942,7 +940,7 @@
     </div>
   </div>
 
-  <div class="relative new-atlab-trust">
+  <div class="relative new-atlab-trust section">
     <img src="/images/atlab-mobile.png" style="height: 40vh; width: 100%" alt="" />
     <div class="relative atlab-carousel">
       <div class="content-slider" style="position: relative; overflow: hidden; width: 50vw">
@@ -1020,21 +1018,21 @@
     </div>
   </div>
 
-  <div class="pl-32 power-header mt-10">
-    <h1 class="text-4xl font-bold mb-10 power-head">
+  <div class="pl-32 power-header mt-10 ">
+    <h1 class="text-4xl font-bold mb-10 power-head section">
       You Power Education. We Power You.
     </h1>
-    <p class="text-sm mb-20 power-header-desc">
+    <p class="text-sm mb-20 power-header-desc section">
       Whether you are an educator, instructor, or faculty - ATLAB <br />
       offers tailored solutions that empower every step of the <br />
       educational journey.
     </p>
   </div>
-  <div class="flex flex-row justify-center gap-1 power-education" style="align-items: baseline">
+  <div class="flex flex-row justify-center gap-1 power-education section" style="align-items: baseline">
     <div class="flex flex-col justify-center items-center">
       <img src="/images/section 4/Sec 4_ Image 1.png" style="width: 16vw; height: 25vh; margin-bottom: 20px"
-        class="power-education-image" alt="" />
-      <span class="text-center power-education-head" style="
+        class="power-education-image section" alt="" />
+      <span class="text-center power-education-head section" style="
             width: 22vw;
             font-size: small;
             border-bottom: 1px solid #000;
@@ -1045,7 +1043,7 @@
           ">
         For Educational Institutions
       </span>
-      <span class="text-center power-education-span" style="
+      <span class="text-center power-education-span section" style="
             width: 22vw;
             font-size: small;
             border-bottom: 3px solid rgb(189, 189, 189);
@@ -1058,7 +1056,7 @@
         <b>Schools (K-12):</b> Focus on STEM education, robotics, coding, and
         hands-on learning tools.
       </span>
-      <span class="text-center power-education-span" style="
+      <span class="text-center power-education-span section" style="
             width: 22vw;
             font-size: small;
             margin-bottom: 20px;
@@ -1073,8 +1071,8 @@
     </div>
     <div class="flex flex-col justify-center items-center">
       <img src="/images/section 4/Sec 4_ Image 2.png" style="width: 16vw; height: 25vh; margin-bottom: 20px" alt=""
-        class="power-education-image" />
-      <span class="text-center power-education-head" style="
+        class="power-education-image section" />
+      <span class="text-center power-education-head section" style="
             width: 22vw;
             font-size: small;
             border-bottom: 1px solid #000;
@@ -1085,7 +1083,7 @@
           ">
         For Educators & Administrators
       </span>
-      <span class="text-center power-education-span" style="
+      <span class="text-center power-education-span section" style="
             width: 22vw;
             font-size: small;
             border-bottom: 3px solid rgb(189, 189, 189);
@@ -1098,7 +1096,7 @@
         Innovative teaching aids and STEM curriculum integration solutions for
         teachers, planners, school management.
       </span>
-      <span class="text-center power-education-span" style="
+      <span class="text-center power-education-span section" style="
             width: 22vw;
             font-size: small;
             margin-bottom: 20px;
@@ -1112,8 +1110,8 @@
     </div>
     <div class="flex flex-col justify-center items-center">
       <img src="/images/section 4/Sec 4_ Image 3.png" style="width: 16vw; height: 25vh; margin-bottom: 20px" alt=""
-        class="power-education-image" />
-      <span class="text-center power-education-head" style="
+        class="power-education-image section" />
+      <span class="text-center power-education-head section" style="
             width: 22vw;
             font-size: small;
             border-bottom: 1px solid #000;
@@ -1124,7 +1122,7 @@
           ">
         For Corporate & Industrial Clients
       </span>
-      <span class="text-center power-education-span" style="
+      <span class="text-center power-education-span section" style="
             width: 18vw;
             font-size: small;
             border-bottom: 3px solid rgb(189, 189, 189);
@@ -1136,7 +1134,7 @@
           ">
         CSR partnerships to drive future-ready education initiatives.
       </span>
-      <span class="text-center power-education-span" style="
+      <span class="text-center power-education-span section" style="
             width: 21vw;
             font-size: small;
             margin-bottom: 20px;
@@ -1150,8 +1148,8 @@
     </div>
     <div class="flex flex-col justify-center items-center">
       <img src="/images/section 4/Sec 4_ Image 4.png" style="width: 16vw; height: 25vh; margin-bottom: 20px" alt=""
-        class="power-education-image" />
-      <span class="text-center power-education-head" style="
+        class="power-education-image section" />
+      <span class="text-center power-education-head section" style="
             width: 22vw;
             font-size: small;
             border-bottom: 1px solid #000;
@@ -1162,7 +1160,7 @@
           ">
         For Students
       </span>
-      <span class="text-center power-education-span" style="
+      <span class="text-center power-education-span section" style="
             width: 15vw;
             font-size: small;
             border-bottom: 3px solid rgb(189, 189, 189);
@@ -1174,7 +1172,7 @@
           ">
         Robotics, coding, AI, and hands-on learning competitions.
       </span>
-      <span class="text-center power-education-span" style="
+      <span class="text-center power-education-span section" style="
             width: 18vw;
             font-size: small;
             margin-bottom: 20px;
@@ -1189,7 +1187,7 @@
   </div>
 
   <!-- Section 5-->
-  <div class="section5">
+  <div class="section5 section">
     <div class="counter-banner">
       <img src="images\Section 5\Counter banner-2.png" alt="Counter Banner" />
 
@@ -1230,11 +1228,11 @@
   <!-- Section 6 -->
   <div class="section6">
     <div class="LearningJourneybackground">
-      <img src="images/Section 6/Learning Journey background.png" alt="Background" />
+      <img src="images/Section 6/Learning Journey background.png" class="section" alt="Background" />
     </div>
 
-    <div class="LearningJourneyContent">
-      <img src="images\Section 6\Learning journey 2.png" alt="Overlay Image" style="position: absolute; top:8%" />
+    <div class="LearningJourneyContent ">
+      <img src="images\Section 6\Learning journey 2.png" alt="Overlay Image" class="section" style="position: absolute; top:8%" />
       <div class="LearningText">
         <h2>Your Complete Learning Partner</h2>
       </div>
@@ -1298,7 +1296,7 @@
 
   <!-- Section 7 -->
   <div class="section7">
-    <div class="inspire-section">
+    <div class="inspire-section section">
       <h2 class="inspire-heading">Learning Spaces to Inspire</h2>
       <p class="inspire-paragraph">
         ATLAB transforms classrooms into immersive hubs of exploration— where
@@ -1308,28 +1306,28 @@
     </div>
 
     <div class="grid-container">
-      <div class="grid-item item-1">
-        <img src="images/Section 7/Sec 7 _ Image 1.png" alt="Students working with robotics" />
+      <div class="grid-item item-1 section">
+        <iframe width="100%" height="100%" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block;border:0 none;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/kn1ll8qJUe"></iframe>
       </div>
 
-      <div class="grid-item item-2">
+      <div class="grid-item item-2 section">
         <div class="sub-item">
           <img src="images/Section 7/Sec 7 _ Image 2.png" alt="Image 2" />
         </div>
-        <div class="sub-item">
+        <div class="sub-item section">
           <img src="images/Section 7/Sec 7 _ Image 3.png" alt="Image 3" />
         </div>
       </div>
 
-      <div class="grid-item item-4">
+      <div class="grid-item item-4 section">
         <img src="images/Section 7/Sec 7 _ Image 4.png" alt="Robotics equipment" />
       </div>
 
-      <div class="grid-item item-5">
+      <div class="grid-item item-5 section">
         <img src="images/Section 7/Sec 7 _ Image 5.png" alt="Programming workspace" />
       </div>
 
-      <div class="grid-item item-6">
+      <div class="grid-item item-6 section">
         <img src="images/Section 7/Sec 7 _ Image 6.png" alt="Science lab" />
       </div>
     </div>
@@ -1337,7 +1335,7 @@
 
   <!-- Our clients -->
   <div>
-    <div class="client-section">
+    <div class="client-section section">
       <h2 class="client-heading">Our Clients</h2>
       <p class="client-paragraph">
         From schools and universities to government bodies and private
@@ -1348,7 +1346,7 @@
     </div>
   </div>
 
-  <div class="clients-logo-7">
+  <div class="clients-logo-7 section">
     <img src="images/new/hafele.png" alt="clients-logos" />
     <img src="images/new/hafele.png" alt="clients-logos" />
 
@@ -1359,22 +1357,22 @@
   <!-- Section 8 -->
   <div class="section8">
     <img src="images\Section 8\Projects bg.png" />
-    <div class="ProjectHeadingText">
+    <div class="ProjectHeadingText section">
       <h2>See Our Projects In Action</h2>
     </div>
 
     <div class="lab-section">
-      <div class="lab-card">
+      <div class="lab-card section">
         <img src="images\Section 8\Sec 8_ Image 1 .png" alt="Lab 1" />
         <h3>Future Innovators DT Lab, ABC International School</h3>
         <a href="#" class="lab-button">Know More</a>
       </div>
-      <div class="lab-card">
+      <div class="lab-card section">
         <img src="images\Section 8\Sec 8_ Image 2.png" alt="Lab 2" />
         <h3>Creative Thinkers Innovation Lab, Green Valley High School</h3>
         <a href="#" class="lab-button">Know More</a>
       </div>
-      <div class="lab-card">
+      <div class="lab-card section">
         <img src="images\Section 8\Sec 8_ Image 3.png" alt="Lab 3" />
         <h3>
           Molecular Biology Science Lab, Nova Science and Tech University
@@ -1386,9 +1384,9 @@
 
   <!-- Success stories-->
   <div class="success-container">
-    <h1 class="main-title">Client Success Stories</h1>
+    <h1 class="main-title section">Client Success Stories</h1>
     <div class="stories-grid">
-      <div class="story-card">
+      <div class="story-card section">
         <div class="image-container">
           <img src="images\Section 9\photo1.JPG" alt="Teacher with children" class="story-image" />
         </div>
@@ -1405,7 +1403,7 @@
         </div>
       </div>
 
-      <div class="story-card">
+      <div class="story-card section">
         <div class="image-container">
           <img src="images\Section 9\photo2.JPG" alt="Mother and child learning" class="story-image" />
         </div>
@@ -1422,7 +1420,7 @@
         </div>
       </div>
 
-      <div class="story-card">
+      <div class="story-card section">
         <div class="image-container">
           <img src="images\Section 9\photo3.JPG" alt="Children playing outdoors" class="story-image" />
         </div>
@@ -1443,17 +1441,17 @@
 
   <!-- Section 9 -->
   <div class="presence-section">
-    <h2>Our Presence</h2>
+    <h2 class="section">Our Presence</h2>
 
-    <div class="flex justify-center gap-6">
-    <div class="presence-content">
-      <div class="presence-map">
-        <img src="images/uae.png" alt="World Map showing our presence" id="map-image"/>
+    <div class="flex flex-col md:flex-row justify-center gap-6">
+      <div class="presence-content section">
+        <div class="presence-map">
+          <img src="images/uae.png" alt="World Map showing our presence" id="map-image"/>
+        </div>
       </div>
-    </div>
 
-      <div class="presence-details">
-        <div class="country-details" data-image="images/uae.png">
+      <div class="presence-details ">
+        <div class="country-details section" data-image="images/uae.png">
           <div class="main-country flex gap-2">
             <div style="height: 60px; width: 5px; background-color:#1877f2"></div>
             <div> 
@@ -1471,7 +1469,7 @@
           </div>
         </div>
 
-        <div class="country-details"  data-image="images/oman.png">
+        <div class="country-details section"  data-image="images/oman.png">
           <div class="main-country flex gap-2">
             <div style="height: 60px; width: 5px; background-color:#1877f2"></div>
             <div> 
@@ -1488,7 +1486,7 @@
           </div>
         </div>
 
-        <div class="country-details"  data-image="images/kuwait.png">
+        <div class="country-details section"  data-image="images/kuwait.png">
           <div class="main-country flex gap-2">
             <div style="height: 60px; width: 5px; background-color:#1877f2"></div>
             <div> 
@@ -1507,7 +1505,7 @@
           </div>
         </div>
 
-        <div class="country-details"  data-image="images/saudi.png">
+        <div class="country-details section"  data-image="images/saudi.png">
           <div class="main-country flex gap-2">
             <div style="height: 60px; width: 5px; background-color:#1877f2"></div>
             <div> 
@@ -1527,7 +1525,7 @@
           </div>
         </div>
 
-        <div class="country-details"  data-image="images/qatar.png">
+        <div class="country-details section"  data-image="images/qatar.png">
           <div class="main-country flex gap-2">
             <div style="height: 60px; width: 5px; background-color:#1877f2"></div>
             <div> 
@@ -1551,7 +1549,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="site-footer">
+  <footer class="site-footer section">
     <div class="footer-grid">
       <!-- Left Column -->
       <div class="footer-col about-us">
@@ -1923,6 +1921,28 @@
       mapImage.src = defaultImage;
     });
   });
+
+
+  const sections = document.querySelectorAll(".section");
+
+const observer = new IntersectionObserver(
+  (entries, observer) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add("animate");
+        observer.unobserve(entry.target); // animate only once
+      }
+    });
+  },
+  {
+    threshold: 0.1,
+  }
+);
+
+sections.forEach(section => {
+  observer.observe(section);
+});
+
 
 
   </script>
