--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         style="height: 15vh; left: 6vw; top: -4vh; z-index: 12" alt="" />
 
       <img src="/images/SECTION 1/Circle shape 3.png" class="absolute right-circle"
-        style="height: 28vh; right: 15vw; top: 65%; z-index: 12" alt="" />
+        style="height: 28vh; right: 16%; top: 72%; z-index: 12" alt="" />
       <img src="/images/SECTION 1/Circle shape 4.png" class="absolute right-circle-2"
         style="height: 28vh; top: 70vh; z-index: 12" alt="" />
     </div>
@@ -527,7 +527,7 @@
             grid-template-columns: repeat(3, 1fr);
             width: 72%;
           ">
-        <div class="p-3 k-12-card-outer-div" style="
+        <div class="p-3 k-12-card-outer-div section" style="
               background-color: rgb(0, 121, 145);
               border-radius: 10px;
             ">
@@ -545,7 +545,7 @@
             </p>
           </div>
         </div>
-        <div class="p-3 k-12-card-outer-div" style="
+        <div class="p-3 k-12-card-outer-div section" style="
               background-color: #d1672d;
               border-radius: 10px;
             ">
@@ -560,7 +560,7 @@
             </p>
           </div>
         </div>
-        <div class="p-3 k-12-card-outer-div" style="
+        <div class="p-3 k-12-card-outer-div section" style="
               background-color: #228b22;
               border-radius: 10px;
             ">
@@ -576,7 +576,7 @@
           </div>
         </div>
 
-        <div class="p-3 k-12-card-outer-div" style="
+        <div class="p-3 k-12-card-outer-div section" style="
               background-color: #8b2424;
               border-radius: 10px;
             ">
@@ -591,7 +591,7 @@
             </p>
           </div>
         </div>
-        <div class="p-3 k-12-card-outer-div" style="
+        <div class="p-3 k-12-card-outer-div section" style="
               background-color: #0085a9;
               border-radius: 10px;
             ">
@@ -608,7 +608,7 @@
         </div>
       </div>
 
-      <div class="ml-4">
+      <div class="ml-4 section">
         <img src="/images/SECTION 2/K12 Main image.png" style="width: 30vw" alt="" class="k-12-image-1" />
       </div>
     </div>
@@ -617,7 +617,7 @@
   <!-- Section 2 -->
   <div id="section2" class="context section">
     <div class="flex flex-row justify-between" style="
-          height: 70vh;
+          height: 530px;
           background-image: url('images/HED Tab Open File/Higher Education-assets/Higher education tab holder.png');
           background-size: cover;
           background-position: center;  
