--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
             </p>
           </div>
           <div class="btn-container">
-            <button class="learn-more-btn translate-scale hidden md:block">Explore K12 Solutions <span
-                class="ml-10 arrow" style="padding: 10px 15px">→</span></button>
+            <button class="learn-more-btn translate-scale hidden md:block" style="padding: 10px 15px">Explore K12 Solutions <span
+                class="ml-10 arrow" >→</span></button>
 
 
             <button class="learn-more-btn translate-scale block md:hidden">
