--- a/index.html
+++ b/index.html
@@ -1314,7 +1314,7 @@
         <div class="sub-item">
           <img src="images/Section 7/Sec 7 _ Image 2.png" alt="Image 2" />
         </div>
-        <div class="sub-item section">
+        <div class="sub-item">
           <img src="images/Section 7/Sec 7 _ Image 3.png" alt="Image 3" />
         </div>
       </div>
