--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
+  <!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <title>Atlab</title>
   <style>
@@ -234,6 +236,20 @@
     .dropdown-arrow-reverse {
       transform: rotate(180deg);
     }
+
+    .search-icon{
+      /*left: 10px; */
+    width: 20px;
+    height: 20px;
+    fill: #888;
+    transition: fill 0.3s ease;
+        position: absolute;
+    left: 10px;
+    color: #000;
+    font-size: 12px;
+    transform: rotate(85deg);
+    text-align: justify;
+    }
   </style>
 </head>
 
@@ -351,15 +367,21 @@
           Shop Now
         </button>
       </div>
-      <div class="translate-scale flex flex-row bg-gray-100 gap-2 px-2 py-1" style="width: 10vw; border-radius:5px">
-        <span class="cursor-pointer bg-gray-100 transition-colors" style="
-             color: rgb(80, 80, 80);
-              font-size: 18px;
-            ">🔍︎</span>
+      <div class="translate-scale" style="position: relative;
+    display: flex
+;
+    align-items: center;
+    width: 100%;
+    max-width: 185px;">
+        <i class="fas fa-search search-icon" onclick="$('#search-desk').submit();" style="cursor: pointer; left: 0; top: 8px;"></i>
         <input type="text" placeholder="Search" name="" class="bg-gray-100" id="" style="
-              outline: none;
-              width: 100%;
-              font-size: 15px;
+    width: 90%;
+    padding: 5px 5px 5px 30px;
+    border: 0px solid #ccc;
+    border-radius: 10px;
+    font-size: 14px;
+    background-color: #dddddd;
+    color: black !important;
             " />
 
       </div>
@@ -795,7 +817,7 @@
               margin-top: -60px;
             " alt="Yellow Circle" />
         <img src="/images/HED Tab Open File/Higher Education-assets/Higher education vector.png"
-          style="height: 200px; margin-top: 30px" class="translate-scale hed-image" alt="Student Illustration" />
+          style="height: 300px; margin-top: 30px" class="translate-scale hed-image" alt="Student Illustration" />
       </div>
     </div>
 
@@ -970,7 +992,7 @@
     </div>
   </div>
 
-  <div class="partners-container section">
+  <div class="partners-container section pl-32">
     <div class="partners-section">
       <h2 class="partners-header">Our Partners</h2>
       <div class="partners-logos-wrapper">
@@ -1359,7 +1381,7 @@
         <p data-target="6" data-suffix="" data-prefix="0">0</p>
       </div>
 
-      <div class="counter-block accredited">
+      <div class="counter-block flex flex-col gap-5 accredited">
         <h3>Accredited</h3>
         <p>STEM.org</p>
       </div>
@@ -1451,11 +1473,9 @@
       </p>
     </div>
 
-    <div class="grid-container">
+    <div class="grid-container pl-32">
       <div class="grid-item item-1 section">
-        <iframe width="100%" height="100%" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope"
-          style="display:block;border:0 none;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);"
-          src="https://panoraven.com/en/embed/kn1ll8qJUe"></iframe>
+        <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; border:0 none; width:100%;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11); height:100%" src="https://panoraven.com/en/embed/FbKXwu4gMZ"></iframe>
       </div>
 
       <div class="grid-item item-2 section">
@@ -1476,7 +1496,7 @@
       </div>
 
       <div class="grid-item item-6 section">
-        <img src="images/Section 7/Sec 7 _ Image 6.png" alt="Science lab" />
+       <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; height:100%;border:0 none; width:100%;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/cXP6PACmNV"></iframe>
       </div>
     </div>
   </div>
@@ -1531,7 +1551,7 @@
   </div>
 
   <!-- Success stories-->
-  <div class="success-container">
+  <div class="success-container pl-32">
     <h1 class="main-title section">Client Success Stories</h1>
     <div class="stories-grid">
       <div class="story-card section">
@@ -1697,7 +1717,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="site-footer section">
+  <footer class="site-footer section pl-32">
     <div class="footer-grid">
       <!-- Left Column -->
       <div class="footer-col about-us">
